--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "firebase": "7.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
