--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "expo": "^38.0.10",
     "expo-status-bar": "^1.0.2",
     "firebase": "7.9.0",
+    "firebase-admin": "^9.2.0",
+    "firebase-functions": "^3.11.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
