--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.2",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "expo-google-sign-in": "~8.2.1",
+    "expo-app-auth": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
