--- a/package.json
+++ b/package.json
@@ -8,29 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "expo": "^38.0.10",
-    "expo-status-bar": "^1.0.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "expo": "^39.0.0",
+    "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.2",
     "react-navigation-stack": "^2.8.2",
-    "expo-google-sign-in": "~8.2.1",
-    "expo-app-auth": "~9.1.1"
+    "expo-google-sign-in": "~8.3.0",
+    "expo-app-auth": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
