--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "^39.0.0",
+    "expo": "^39.0.5",
+    "expo-app-auth": "~9.2.0",
+    "expo-google-sign-in": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "firebase-admin": "^9.2.0",
@@ -24,9 +26,7 @@
     "react-native-web": "~0.13.7",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.2",
-    "react-navigation-stack": "^2.8.2",
-    "expo-google-sign-in": "~8.3.0",
-    "expo-app-auth": "~9.2.0"
+    "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
