--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "^39.0.5",
-    "expo-app-auth": "~9.2.0",
-    "expo-google-sign-in": "~8.3.0",
+    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/storage": "^11.2.0",
+    "@react-native-picker/picker": "1.9.2",
+    "axios": "^0.21.1",
+    "expo": "^40.0.0",
+    "expo-app-auth": "^9.3.0",
+    "expo-constants": "~9.3.3",
+    "expo-file-system": "~9.3.0",
+    "expo-google-sign-in": "~8.4.0",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "firebase-admin": "^9.2.0",
@@ -19,14 +26,18 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-file-viewer": "^2.1.4",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-resizer": "^1.4.3",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.7",
+    "react-native-webview": "11.0.0",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.2",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "rn-pdf-reader-js": "^4.1.1",
+    "react-native-safe-area-context": "3.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
